prevent overlap when the day overflows

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -45,7 +45,7 @@ body {
 
 .day-view {
     box-shadow: -1px -1px 2px #888;
-    height: 100px;
+    min-height: 100px;
 }
 
 .day-col {
